# ai-native-dev

guides/: 07_mcp_guide.md  09_multi_agent_guide.md
labs/01-python-for-ai/notebooks/: 05_lists.ipynb
labs/02-llm-chat-agent/demo-02-basic-streaming/: .envbackup
labs/02-llm-chat-agent/demo-03-test-local-model/: main.py
labs/02-llm-chat-agent/demo-08-llm-stream-endpoint/: README.md  main.py
labs/03-langchain/demo-01-setting-up-and-calling-an-llm-in-langchain/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-02-basic-llm-invocation-with-retry/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-03-temperature-on-model-responses/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-04-max-token/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-05-max-tokens-and-temperature/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-06-non-blocking-chat-with-llm/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-07-langchain-streaming/: README.md  pyproject.toml
labs/03-langchain/demo-11-automating-customer-support-responses/: README.md  pyproject.toml
labs/03-langchain/demo-12-structuredoutputparser-product-information/: README.md  pyproject.toml
labs/03-langchain/demo-13-automating-email-categorization-with-ai/: README.md  pyproject.toml
labs/03-langchain/demo-14-simple-lcel-chain-demo/: README.md  pyproject.toml
labs/03-langchain/demo-15-sentiment-analysis-lcel-chain-demo/: README.md  pyproject.toml
labs/03-langchain/demo-16-simple-router-chain-api/: README.md  pyproject.toml
labs/03-langchain/demo-17-building-a-fastapi-chat-app-stateless-vs-stateful-prompts/: README.md  pyproject.toml
labs/03-langchain/demo-18-fast-api-text-translation-with-memory-and-chaining/: README.md  pyproject.toml
labs/03-langchain/demo-19-session-based-conversational-memory-in-action/: README.md  pyproject.toml
labs/03-langchain/demo-20-intelligent-customer-support-agent/: README.md  pyproject.toml
labs/04-rag/demo-02-text-embedding-generator/: README.md  pyproject.toml
labs/04-rag/demo-02-text-embedding-generator/main/: __init__.py  generate_embeddings.py  main.py
labs/04-rag/demo-02-text-embedding-generator/test/: README.md  __init__.py  conftest.py  test_generate_embeddings.py
labs/05-mcp/demo-01-basic-mcp-stdio/: README.md  main.py  pyproject.toml  test_client.py  test_client_fastmcp.py
labs/05-mcp/demo-02-mcp-calculator-tools/: README.md  main.py  pyproject.toml  test_client.py  test_client_fastmcp.py
labs/05-mcp/demo-03-mcp-weather-server/: main.py  pyproject.toml  test_client_fastmcp.py
labs/05-mcp/demo-04-mcp-filesystem-server/: main.py  pyproject.toml  test_client_fastmcp.py
labs/05-mcp/demo-06-mcp-http-transport/: test_client_fastmcp.py
labs/05-mcp/demo-07-langchain-mcp-integration/: main.py  pyproject.toml  test_client_fastmcp.py
labs/06-observability/demo-04-langchain-auto-tracing/: main.py  pyproject.toml
labs/07-multi-agent/: README.md
labs/07-multi-agent/demo-01-langgraph-hello-world/: .env.example  README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-02-conditional-routing/: .env.example  README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-03-state-schema/: README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-04-chatbot-with-memory/: README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-05-tool-calling-agent/: README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-06-human-in-the-loop/: README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-07-multi-agent-supervisor/: README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-08-parallel-execution/: README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-09-rag-graph/: README.md  main.py  pyproject.toml
labs/07-multi-agent/demo-10-advanced-multi-agent-pipeline/: README.md  main.py  pyproject.toml
practices/practice-04-langchain-agent/: main.py  pyproject.toml
