[project]
name = "demo-07-langchain-streaming"
version = "0.1.0"
description = "LangChain streaming responses demonstration with multi-provider support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.0.0",
    "langchain-openai==1.0.0",
    "langchain-core==1.0.1",
    "python-dotenv==1.2.1",
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
]
