[project]
name = "demo-13-automating-email-categorization-with-ai"
version = "0.1.0"
description = "A FastAPI application demonstrating how to use LangChain's `PydanticOutputParser` to extract structured data from AI model responses using Google's Gemini AI model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"langchain==1.0.0",
    "langchain-openai==1.0.0",
    "langchain-core==1.0.1",
    "python-dotenv==1.2.1",
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.4",
]
