[project]
name = "demo-16-simple-router-chain-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.121.0",
	"uvicorn[standard]==0.38.0",
	"python-dotenv==1.2.1",
	"requests==2.32.5",
	"langchain-openai==1.0.0",
	"langchain==1.0.0",
	"langchain-core==1.0.1",
]
