[project]
name = "demo-19-session-based-conversational-memory-in-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "python-dotenv==1.2.1",
    "langchain==1.0.0" ,  
    "langchain-openai==1.0.0",
    "langchain-community==0.4.1",
    "typing-extensions==4.15.0",
    "requests==2.32.5"

]
