[project]
name = "demo-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai==1.0.0",
    "numpy==2.3.4",
    "python-dotenv==1.2.1",
    "pydantic==2.12.4",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
]
