[project]
name = "demo-03-state-schema"
version = "0.1.0"
description = "LangGraph state schema: TypedDict, Annotated reducers, add_messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]
