[project]
name = "demo-04-chatbot-with-memory"
version = "0.1.0"
description = "LangGraph checkpointing: MemorySaver, thread_id, multi-turn conversation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]
