[project]
name = "demo-05-tool-calling-agent"
version = "0.1.0"
description = "LangGraph ReAct agent: @tool, ToolNode, tools_condition, reasoning loop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]
