[project]
name = "demo-06-human-in-the-loop"
version = "0.1.0"
description = "LangGraph human-in-the-loop: interrupt, Command(resume), approval workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]
