[project]
name = "demo-08-parallel-execution"
version = "0.1.0"
description = "LangGraph fan-out / fan-in: run multiple nodes in parallel, merge results"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]
