[project]
name = "demo-09-rag-graph"
version = "0.1.0"
description = "Corrective RAG as a LangGraph: retrieve, grade, fallback, generate, hallucination check"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
]
