[project]
name = "demo-10-advanced-multi-agent-pipeline"
version = "0.1.0"
description = "Advanced LangGraph pipeline: supervisor, parallel workers, memory, human-in-the-loop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]
